-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u291, jfx17
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8276631 | jfx17.0.2 | Kevin Rushforth | P2 | Resolved | Fixed | |
| JDK-8276740 | jfx11.0.14 | Kevin Rushforth | P2 | Resolved | Fixed | |
| JDK-8275641 | 8u321 | Kevin Rushforth | P2 | Closed | Fixed | b03 |
| JDK-8276885 | 8u311 | Kevin Rushforth | P2 | Closed | Fixed | b32 |
longer be valid. If you point the JavaFX WebView to a website and that website's WebService looks at
the request headers for It now returns empty String " " as the "User-Agent" header.
It used to be
"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/610.2 (KHTML, like Gecko) JavaFX/8.0 Safari/610.2"
- backported by
-
JDK-8276631 WebView: UserAgent string is empty for first request
-
- Resolved
-
-
JDK-8276740 WebView: UserAgent string is empty for first request
-
- Resolved
-
-
JDK-8275641 WebView: UserAgent string is empty for first request
-
- Closed
-
-
JDK-8276885 WebView: UserAgent string is empty for first request
-
- Closed
-
- duplicates
-
JDK-8280061 UserAgent blank when initially opening a WebView
-
- Closed
-
-
JDK-8270907 UserAgent is blank for first request
-
- Closed
-
- relates to
-
JDK-8193207 [TESTBUG] Unit test case to check user agent string
-
- Resolved
-
-
JDK-8300730 Webview does not displays contents
-
- Closed
-
- links to
-
Commit
openjdk/jfx11u/d9c0729e
-
Commit
openjdk/jfx17u/75a2f444
-
Commit
openjdk/jfx/d6f78e27
-
Review
openjdk/jfx11u/57
-
Review
openjdk/jfx17u/17
-
Review
openjdk/jfx/643