8275138: WebView: UserAgent string is empty for first request